# agent-learn

./: .gitignore  MODULE_README.md  README.md  pyproject.toml
agent_learn/: __init__.py  advanced_agent.py  analysis_agent.py  base.py  cache_first.py  memory.py  memory_agent.py  multi_agent.py  provider_agent.py  react_agent.py  reflexion_agent.py  simple_agent.py  tools.py
agent_learn/adapters/: __init__.py  anthropic.py  base.py  openai.py
docs/: 01-agent-overview.md  02-core-components.md  03-learning-roadmap.md  04-frameworks-deep-dive.md  05-practice-exercises.md  06-oh-my-opencode-analysis.md  07-reasonix-architecture-analysis.md  08-custom-problem-agent.md  09-production-agent-patterns.md  10-advanced-agent-patterns.md  11-agent-best-practices-cheatsheet.md  12-agentic-rag-and-protocols.md  13-metacognition-and-evaluation.md  14-awesome-agent-ecosystem.md
examples/: 01_weather_agent.py  02_react_agent.py  03_agent_with_memory.py  04_multi_agent_collab.py  05_code_assistant.py  06_omo_style_agent.py  07_cache_first_agent.py  08_custom_analysis_agent.py  09_memory_swap.py  10_multi_model_agent.py  11_reflexion_agent.py
