[project]
name = "agent-learn"
version = "0.1.0"
description = "AI Agent 开发学习项目 - 从零构建智能体"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3.0", "langchain-anthropic>=0.3.0", "langgraph>=0.2.0"]
all = ["agent-learn[langchain]"]

[tool.setuptools.packages.find]
where = ["."]
